<package>
  <name>arbotix_firmware</name>
  <version>0.11.0</version>
  <description>
    Firmware source code for ArbotiX ROS bindings.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix_firmware</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
